# gnosis-flow

./: .gitignore  ANALYSIS_COMPLETE.md  CLI_COMMANDS.md  LICENSE  README.md  README_MONITOR.md  TECHNICAL_SUMMARY.md  THE_PLAN.md  analyze_claude_flow.py  commit_message.txt  config.yaml  demo.ps1  pyproject.toml  requirements.txt
gnosis_flow/: actions.py  ahp_compat.py  cli.py  metrics.py  rules.py  runtime.py  templating.py  util.py
gnosis_flow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gnosis_flow/ahp_tools/: echo.py  graph.py
gnosis_flow/graph/: store.py
gnosis_flow/mcp/: gnosis_flow_mcp.py
plan/: EPIC_Code_Relationship_Graph.md  MASTER.md  README.md  analyze_claude_flow_enhanced.py
scripts/: index-graph.ps1
tests/: test_dir_watcher.py  test_graph_basic.py  test_graph_http.py  test_graph_similarity_and_terms.py  test_log_tailer.py  test_rules_eval.py
