[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnosis-flow"
version = "0.1.0"
description = "Gnosis Flow Monitor: async file/log watcher that triggers actions (AI tool calls, notify, shell)"
readme = "README_MONITOR.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Gnosis", email = "devnull@example.com" }
]
dependencies = [
  "typer>=0.12.3",
  "PyYAML>=6.0",
  "rapidfuzz>=3.0",
]

[project.urls]
Homepage = "https://example.com/gnosis-flow"

[project.scripts]
gnosis-flow = "gnosis_flow.cli:main"
gnosis-flow-mcp = "gnosis_flow.mcp.gnosis_flow_mcp:mcp.run"

[tool.setuptools]
packages = ["gnosis_flow"]
include-package-data = true

[project.optional-dependencies]
mcp = [
  "mcp>=0.4.0",
]
